fix some LakeFS test issues